--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>My Links</title>
+  <title>성안당이런일</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -53,8 +53,8 @@
   </style>
 </head>
 <body>
-  <h1>📌 내 링크 모음</h1>
-  <p>자주 사용하는 서비스 바로가기</p>
+  <h1>📌 프로젝트1</h1>
+  <p>서비스 바로가기</p>
 
   <div class="link-list">
     <a href="https://polished-natural-midge.ngrok-free.app/" target="_blank" class="button-link">🔗 BM</a>
