--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <a href="https://docs.google.com/document/d/1L8dg_CyL0KCxnPnqwyA1L_7bRyCR52-DF5VJdhk8if4/edit?usp=sharing" target="_blank" class="button-link">📝 Google Doc</a>
     <a href="https://www.figma.com/design/RGpCNVBC8R5Gpz90zYBaST/%EC%9D%B4%EB%9F%B0%EC%9D%BC%EC%9A%94%EC%9B%90?node-id=0-1&t=yTJhzMsUZGbjqzPu-1" target="_blank" class="button-link">🎨 Figma1</a>
     <a href="https://www.figma.com/proto/RGpCNVBC8R5Gpz90zYBaST/%EC%9D%B4%EB%9F%B0%EC%9D%BC%EC%9A%94%EC%9B%90?page-id=0%3A1&node-id=5-53&p=f&viewport=-371%2C42%2C0.43&t=znDpgPxgiqlQghaJ-1&scaling=min-zoom&content-scaling=fixed" target="_blank" class="button-link">🎨 Figma2</a>
+    <a href="https://www.figma.com/deck/Doy2DrGH0q6M283qXW0Lhx/deck-title?node-id=147-36&viewport=-86%2C-76%2C0.48&t=FGhho5aiM6SYe0G0-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank" class="button-link">🎨 Figma3</a>
     <a href="https://clarity.microsoft.com/projects" target="_blank" class="button-link">📊 Clarity</a>
     ------------------------------------------------
     <a href="https://platform.openai.com/docs/overview" target="_blank" class="button-link">📊 OpenAI Platform</a>
